--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <link rel="icon" href="/logo.svg" />
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <title>Vite App</title>
+  <meta name="keywords" content="project,进展,岩土工程,abaqus" />
+  <meta name="description" content="作为一名研究生，这是我的项目进展日记本，目标是抓紧完成，努力毕业" />
+  <title>小石的课题日记本 | 📕</title>
 </head>
 
 <body>
